# fimhs

./: .gitignore  Cargo.toml  Fim.hs  stress_test.nu
agent/: Cargo.toml
agent/src/: main.rs
core/: Cargo.toml
core/src/: lib.rs
gui/src-tauri/: Cargo.toml  tauri.conf.json
