[package]
name = "agent"
version = "0.1.0"
edition = "2024"

[dependencies]
blake3 = "1.8.4"
clap = { version = "4.6.0", features = ["derive"] }
core = { version = "0.1.0", path = "../core" }
jwalk = "0.8.1"
log = "0.4.29"
rayon = "1.11.0"
serde_json = "1.0.149"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
